--- a/index.html
+++ b/index.html
@@ -13,8 +13,53 @@
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <hr>
     </header>
 
+    <!--Main-->
+    <div spese> 
+        <h2>Le mie spese</h2>
+        <table>
+
+            <!--intestazione tabella-->
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
+
+            <!--corpo tabella-->
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+            </tbody>
+
+            <!--chiusura tabella-->
+            <tfoot>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360€</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div spese>
+    <hr>
 
     
 </body>
