add activity list

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <div spese> 
         <h2>Le mie spese</h2>
         <table>
-
             <!--intestazione tabella-->
             <thead>
                 <tr>
@@ -29,7 +28,6 @@
                     <th>Costo</th>
                 </tr>
             </thead>
-
             <!--corpo tabella-->
             <tbody>
                 <tr>
@@ -48,7 +46,6 @@
                     <td>120€</td>
                 </tr>
             </tbody>
-
             <!--chiusura tabella-->
             <tfoot>
                 <tr>
@@ -59,6 +56,18 @@
             </tfoot>
         </table>
     </div spese>
+    <hr>
+
+    <div tasks>
+        <h3>Cose da fare</h3>
+        <!--Lista attività-->
+        <ul>
+            <li>Visitare la Tower of London &#10007</li>
+            <li>Visitare Greenwich &#10003</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#10007</li>
+        </ul>
+    </div tasks>
     <hr>
 
     
