--- a/index.html
+++ b/index.html
@@ -17,86 +17,93 @@
     </header>
 
     <!--Main-->
-    <div spese> 
-        <h2>Le mie spese</h2>
-            <table>
-                <!--intestazione tabella-->
-                <thead>
-                    <tr>
-                        <th>Numero</th>
-                        <th>Descrizione</th>
-                        <th>Costo</th>
-                    </tr>
-                </thead>
-                <!--corpo tabella-->
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Biglietto Aereo</td>
-                        <td>120€</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Biglietto Aereo</td>
-                        <td>120€</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Biglietto Aereo</td>
-                        <td>120€</td>
-                    </tr>
-                </tbody>
-                <!--chiusura tabella-->
-                <tfoot>
-                    <tr>
-                        <td>Totale</td>
-                        <td></td>
-                        <td>360€</td>
-                    </tr>
-                </tfoot>
-            </table>
-    </div spese>
-    <hr>
-
-    <div tasks>
-        <h3>Cose da fare</h3>
-            <!--Lista attività-->
-            <ul>
-                <li>Visitare la Tower of London &#10007</li>
-                <li>Visitare Greenwich &#10003</li>
-                <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
-                <li>Mangiare il tipico Fish and Chips inglese &#10007</li>
-            </ul>
-    </div tasks>
-    <hr>
-
-    <div info>
-        <h3>Info utili:</h3>
-            <!--Lista info-->
-            <ol>
-                <!--Numeri utili-->
-                <li>Numeri utili di emergenza</li>
-                    <ul>
-                        <li><strong>999</strong> - Emergenza</li>
-                        <li><strong>101</strong> - Numero polizia</li>
-                        <li><strong>111</strong> - Numero assistenza medica</li>
-                    </ul>
-                <!--Hotel-->
-                <li>Hotel</li>
-                    <ul>
-                        <li><strong>Nome hotel</strong>: Buckingham Palace</li>
-                        <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
-                    </ul>
-                <!--Aereo-->
-                <li>Aereo</li>
-                    <ul>
-                        <li><strong>Volo di Andata</strong>: Y1234X, ore 9.30 da Milano Malpensa</li>
-                        <li><strong>Volo di Ritorno</strong>: Y1236X, ore 18.30 da london Heathrow</li>
-                    </ul>
-            </ol>
-    </div info>
-    <hr>
-
+    <main>
+        <div spese> 
+            <h2>Le mie spese</h2>
+                <table>
+                    <!--intestazione tabella-->
+                    <thead>
+                        <tr>
+                            <th>Numero</th>
+                            <th>Descrizione</th>
+                            <th>Costo</th>
+                        </tr>
+                    </thead>
+                    <!--corpo tabella-->
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120€</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120€</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto Aereo</td>
+                            <td>120€</td>
+                        </tr>
+                    </tbody>
+                    <!--chiusura tabella-->
+                    <tfoot>
+                        <tr>
+                            <td>Totale</td>
+                            <td></td>
+                            <td>360€</td>
+                        </tr>
+                    </tfoot>
+                </table>
+        </div spese>
+        <hr>
     
+        <div tasks>
+            <h3>Cose da fare</h3>
+                <!--Lista attività-->
+                <ul>
+                    <li>Visitare la Tower of London &#10007</li>
+                    <li>Visitare Greenwich &#10003</li>
+                    <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+                    <li>Mangiare il tipico Fish and Chips inglese &#10007</li>
+                </ul>
+        </div tasks>
+        <hr>
+    
+        <div info>
+            <h3>Info utili:</h3>
+                <!--Lista info-->
+                <ol>
+                    <!--Numeri utili-->
+                    <li>Numeri utili di emergenza</li>
+                        <ul>
+                            <li><strong>999</strong> - Emergenza</li>
+                            <li><strong>101</strong> - Numero polizia</li>
+                            <li><strong>111</strong> - Numero assistenza medica</li>
+                        </ul>
+                    <!--Hotel-->
+                    <li>Hotel</li>
+                        <ul>
+                            <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                            <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
+                        </ul>
+                    <!--Aereo-->
+                    <li>Aereo</li>
+                        <ul>
+                            <li><strong>Volo di Andata</strong>: Y1234X, ore 9.30 da Milano Malpensa</li>
+                            <li><strong>Volo di Ritorno</strong>: Y1236X, ore 18.30 da london Heathrow</li>
+                        </ul>
+                </ol>
+        </div info>
+        <hr>
+    </main>
+
+    <!--footer-->
+ <footer>
+    <h3>Le foto</h3>
+    <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+    <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
+</footer> 
 </body>
 </html>
